phonon-backend-vlc (0.8.0-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Diane Trout <diane@ghic.org>  Sat, 13 Sep 2014 16:34:19 -0700

phonon-backend-vlc (0.7.2-1) unstable; urgency=medium

  [ Sune Vuorela ]
  * Add vlc-plugin-pulse to Depends. It ensures that audio works out of the
    box for pulse-audio users and has no disadvantages for users that doesn't
    use pulse-audio. (Closes: #689805)

  [ Maximiliano Curia ]
  * Update watch file.
  * New upstream release.

 -- Maximiliano Curia <maxy@debian.org>  Tue, 22 Jul 2014 09:24:29 +0200

phonon-backend-vlc (0.7.1-1) unstable; urgency=low

  * Team upload.
  * New upstream release.
    - Ensure that PulseAudio environment is set up when running older
      backends (Closes: #730131).
  * Bump build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 09 Dec 2013 16:39:27 -0300

phonon-backend-vlc (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Team upload.

  [ Pino Toscano ]
  * Bump the debhelper compatibility to 9:
    - bump compat to 9
    - bump the debhelper build dependency to >= 9
  * Update Vcs-* headers.
  * Fix watch file.
  * Convert to multiarch:
    - install the plugin in a multiarch location
    - mark all the packages as Multi-Arch: same
    - add ${misc:Pre-Depends} in phonon-backend-vlc

  [ Modestas Vainius ]
  * Require phonon 4.7.0(.0).
  * Bump Standards-Version to 3.9.5: no further changes needed.

 -- Modestas Vainius <modax@debian.org>  Tue, 05 Nov 2013 13:11:51 +0200

phonon-backend-vlc (0.6.2-2) unstable; urgency=low

  * Upload to unstable.

 -- Modestas Vainius <modax@debian.org>  Tue, 28 May 2013 22:48:19 +0300

phonon-backend-vlc (0.6.2-1) experimental; urgency=low

  * New upstream release.

 -- Modestas Vainius <modax@debian.org>  Wed, 13 Feb 2013 21:20:05 +0200

phonon-backend-vlc (0.6.1-1) experimental; urgency=low

  * New upstream release.
  * Require libvlc 2.0.1, needed by upstream.