@@ -1,0 +1,1 @@
+usr/share/kde4/services/phononbackends/vlc.desktop
