@@ -1,0 +1,1 @@
+usr/lib/*/qt5/plugins/phonon4qt5_backend/phonon_vlc.so
